# api/docs/swagger.json
@@ -1760,9 +1760,6 @@
                 "lesson_hours": {
                     "type": "number"
                 },
-                "picture_url": {
-                    "type": "string"
-                },
                 "price": {
                     "type": "number"
                 },
@@ -1785,6 +1782,9 @@
                 },
                 "name": {
                     "$ref": "#/definitions/proto.MultilingualField"
+                },
+                "picture_url": {
+                    "type": "string"
                 }
             }
         },
@@ -1838,6 +1838,9 @@
                 },
                 "name": {
                     "$ref": "#/definitions/proto.MultilingualField"
+                },
+                "picture_url": {
+                    "type": "string"
                 }
             }
         },
@@ -1855,9 +1858,6 @@
                 },
                 "lesson_hours": {
                     "type": "number"
-                },
-                "picture_url": {
-                    "type": "string"
                 },
                 "price": {
                     "type": "number"
